--- a/index.html
+++ b/index.html
@@ -349,10 +349,8 @@
 
   <footer>
     <div class="social-links">
-      <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-telegram"></i></a>
-      <a href="#" target="_blank"><i class="fab fa-discord"></i></a>
-    </div>
+      <a href="https://x.com/braincelltoken" target="_blank"><i class="fab fa-twitter"></i></a>
+                </div>
     <p>© 2023 Braincell Token. All rights reserved. (Even the dumb ones.)</p>
   </footer>
 
