--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
       <img src="brain_logo.png" alt="Braincell Token Logo" class="logo animate__animated animate__bounceIn">
       <h1 class="animate__animated animate__fadeInUp">Braincell Token</h1>
       <p class="tagline animate__animated animate__fadeInUp animate__delay-1s">The smartest coin on Solana. Buy BRAIN, gain braincells, win life.</p>
-      <a href="https://pump.fun/" class="buy-button animate__animated animate__fadeInUp animate__delay-2s" target="_blank">Buy on Pump.fun</a>
+      <a href="https://pump.fun/coin/GpJ5bxEbDx39xEwaqwzcyBGzb9krEYxTfJe8GZJopump" class="buy-button animate__animated animate__fadeInUp animate__delay-2s" target="_blank">Buy on Pump.fun</a>
     </div>
   </header>
 
